# solver-tutorials

./: README.md
gurobi/: README.md  main.py  pyproject.toml
gurobi/lessons/: gurobi_env.py  lesson01.py  lesson02.py  lesson02b.py  lesson03.py  lesson04.py  lesson04b.py  lesson05.py  lesson_notes.md
orlab/: README.md  pyproject.toml
orlab/docs/: 00-verify.ipynb  01-exercise1.ipynb  01-verify.ipynb  05-equations.ipynb  05-exercise5.ipynb  06-tank-utilization-c.md  06-tank-utilization-d.md  06-tank-utilization.ipynb  06-tank-utilization.md  06-tank-utilization2.md  orlab-notes.md
orlab/src/orlab/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise6b.py  exercise6c.py  exercise6d.py
orlab/tests/: test_exercise6d.py
ortools/: README.md  pyproject.toml
ortools/docs/: 01-verify.ipynb
ortools/src/ortools/: __init__.py
