[project]
name = "orlab"
version = "0.1.0"
description = "OR-Tools learning laboratory"
readme = "README.md"
authors = [
    { name = "Richard Lack", email = "rilack@microsoft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.0",
    "jupyter",
    "ipython",
    "ipykernel",
]

[project.scripts]
orlab = "orlab:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
